--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ nav ul li a:hover {
 }
 
 .carousel-item {
-  color: rgb(27, 27, 27);
+  color: #e3ebfa;
 }
 
 .carousel-caption h1 {
@@ -150,9 +150,10 @@ nav ul li a:hover {
 .carousel-caption p {
   position: absolute;
   font-size: 18px;
+  font-weight: 300;
   animation-name: panim;
   animation-duration: 0.5s;
-  animation-delay: 0.5s;
+  animation-delay: 1s;
   animation-fill-mode: forwards;
   transform: translate(-50%, -50%);
 }
@@ -180,6 +181,16 @@ nav ul li a:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0px 0px 5px 0px rgba(168, 157, 157, 0.31);
+  animation-name: btnanim;
+  animation-duration: 0.5s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  opacity: 0; 
+}
+
+@keyframes btnanim {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 
 .carousel-caption .btn:hover {
@@ -372,7 +383,7 @@ nav ul li a:hover {
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
-    background-color: crimson;
+    background-color: #003994;
     z-index: 1;
     transform: translateX(100%);
     transition: all 0.5s;
@@ -392,6 +403,7 @@ nav ul li a:hover {
     font-size: 24px;
     top: 100px;
     left: 50%;
+    animation: none;
     transform: translate(-50%, -50%);
   }
 
@@ -399,6 +411,8 @@ nav ul li a:hover {
     font-size: 14px;
     top: 200px;
     left: 50%;
+    width: 80%;
+    animation: none;
     transform: translate(-50%, -50%);
   }
 
@@ -438,6 +452,7 @@ nav ul li a:hover {
     font-weight: bolder;
     top: 200px;
     left: 50%;
+    animation: none;
     transform: translate(-50%, -50%);
   }
 
@@ -446,6 +461,7 @@ nav ul li a:hover {
     font-size: 16px;
     top: 300px;
     left: 50%;
+    animation: none;
     transform: translate(-50%, -50%);
   }
 
