change color section

--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ nav ul li a:hover {
 
 /* We are creative digital*/
 .amazing-title {
-  background-color: #003994;
+  background-color: #3361A9;
   color: #fff;
   width: 100%;
   height: 300px;
